[tool.poetry]
name = "gofra"
version = "0.0.1"
description = "Stack based programming language"
authors = ["Kirill Zhosul <kirillzhosul@yandex.com>"]
license = "MIT"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
