[tool.poetry]
name = "gofra"
version = "0.0.1"
description = "Stack based programming language"
authors = ["Kirill Zhosul <kirillzhosul@yandex.com>"]
license = "MIT"
package-mode = true
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",
    "A005",
    "D105",
    "D100",
    "D103",
    "PLR0912",
    "PLR0915",
    "C901",
    "D107",
    "D101",
    "D102",
    "W291",
    "E501",
    "UP031",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
